# ml-mandel

./: run.rb
cpp/: .gitignore
cpp/clang/: CMakeLists.txt
cpp/gcc/: CMakeLists.txt
cpp/src/: main.cpp
go/: main.go
julia/: main.jl
kotlin/: main.kt  makefile
rust/mandel/: Cargo.toml
rust/mandel/src/: main.rs
swift/: main.swift  makefile
